--- a/templates/getlocations.html
+++ b/templates/getlocations.html
@@ -101,7 +101,7 @@
         }
     </script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAi5vhzdpRmVobBMcQJhelDz_vt6b--1_o&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=zzz&callback=initMap"></script>
 </body>
 
 </html>
